// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragAndDropContainer react component should enable iconHandle for child that has nested items property 1`] = `
<div>
  <ul
    className="list-group"
  >
    <Connect(DragSource(DropTarget(DragAndDropItem)))
      container={
        Object {
          "id": "unique_id",
        }
      }
      iconHandle={true}
      id={1}
      index={0}
      items={
        Array [
          Object {
            "content": "sub item",
            "id": 3,
          },
        ]
      }
      key="1"
      moveItem={[Function]}
      originalItem={
        Object {
          "content": "A rude awakening",
          "id": 1,
          "items": Array [
            Object {
              "content": "sub item",
              "id": 3,
            },
          ],
        }
      }
      removeItem={[Function]}
    >
      <Component />
    </Connect(DragSource(DropTarget(DragAndDropItem)))>
    <Connect(DragSource(DropTarget(DragAndDropItem)))
      container={
        Object {
          "id": "unique_id",
        }
      }
      iconHandle={false}
      id={2}
      index={1}
      key="2"
      moveItem={[Function]}
      originalItem={
        Object {
          "content": "A nice awakening",
          "id": 2,
        }
      }
      removeItem={[Function]}
    >
      <Component />
    </Connect(DragSource(DropTarget(DragAndDropItem)))>
    <div
      className="no-properties"
    >
      <div
        className="no-properties-wrap"
      >
        <Connect(Translate)>
          Drag items here
        </Connect(Translate)>
      </div>
    </div>
  </ul>
</div>
`;

exports[`DragAndDropContainer react component should enable iconHandle on children if iconHandle is enabled in container 1`] = `
<div>
  <ul
    className="list-group"
  >
    <Connect(DragSource(DropTarget(DragAndDropItem)))
      container={
        Object {
          "id": "unique_id",
        }
      }
      iconHandle={true}
      id={1}
      index={0}
      key="1"
      moveItem={[Function]}
      originalItem={
        Object {
          "content": "A rude awakening",
          "id": 1,
        }
      }
      removeItem={[Function]}
    >
      <Component />
    </Connect(DragSource(DropTarget(DragAndDropItem)))>
    <Connect(DragSource(DropTarget(DragAndDropItem)))
      container={
        Object {
          "id": "unique_id",
        }
      }
      iconHandle={true}
      id={2}
      index={1}
      key="2"
      moveItem={[Function]}
      originalItem={
        Object {
          "content": "A nice awakening",
          "id": 2,
        }
      }
      removeItem={[Function]}
    >
      <Component />
    </Connect(DragSource(DropTarget(DragAndDropItem)))>
    <div
      className="no-properties"
    >
      <div
        className="no-properties-wrap"
      >
        <Connect(Translate)>
          Drag items here
        </Connect(Translate)>
      </div>
    </div>
  </ul>
</div>
`;
